objects/TW1_Parcelas__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Comentarios__c</fullName>
        <label>Comentários</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Base__c</fullName>
        <label>Data Base</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Inicio_Juros__c</fullName>
        <label>Data Inicio Juros</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Prorrogacao__c</fullName>
        <label>Data de Prorrogação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Venda__c</fullName>
        <label>Data Venda</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Dias_em_Aberto__c</fullName>
        <formula>IF(ISPICKVAL(TW1_Situacao_da_Parcela__c,&quot;Inadimplente&quot;),
   TODAY() -  TW1_datavencimento__c,
   0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias em Aberto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Indice_Reajuste__c</fullName>
        <label>Índice de reajuste</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_meses__c</fullName>
        <label>Parcelas/Meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Situacao_da_Parcela__c</fullName>
        <label>Situação da Parcela</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adimplente</fullName>
                </value>
                <value>
                    <fullName>Inadimplente</fullName>
                </value>
                <value>
                    <fullName>Aberta</fullName>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sinal</fullName>
                </value>
                <value>
                    <fullName>Parcela P</fullName>
                </value>
                <value>
                    <fullName>Mensal</fullName>
                </value>
                <value>
                    <fullName>Parcela G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parcelas</relationshipLabel>
        <relationshipName>ParcelasUnidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Parcela__c</fullName>
        <formula>TW1_Valor_Serie__c /  TW1_Parcelas_meses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Parcela</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Serie__c</fullName>
        <label>Valor Série</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Vencto_1_Parcela__c</fullName>
        <label>Vencto da 1ª Parcela</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_amortizacao__c</fullName>
        <label>amortizacao</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gradiente</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>SAC</fullName>
                </value>
                <value>
                    <fullName>Simples</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_beginendprice__c</fullName>
        <label>beginendprice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Begin</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_capacrescimo__c</fullName>
        <label>capacrescimo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capcorrecao__c</fullName>
        <label>capcorrecao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capcorrecaoatraso__c</fullName>
        <label>capcorrecaoatraso</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capdesconto__c</fullName>
        <label>capdesconto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capdescontoantecipacao__c</fullName>
        <label>capdescontoantecipacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capdescontocondicional__c</fullName>
        <label>capdescontocondicional</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capdescontocusta__c</fullName>
        <label>capdescontocusta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capjuros__c</fullName>
        <label>capjuros</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capjurosatraso__c</fullName>
        <label>capjurosatraso</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capmulta__c</fullName>
        <label>capmulta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_capprincipal__c</fullName>
        <label>capprincipal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_caprepasse__c</fullName>
        <label>caprepasse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_captaxaboleto__c</fullName>
        <label>captaxaboleto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_cobrarcorrecaocusta__c</fullName>
        <label>cobrarcorrecaocusta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_cobrarimpostocusta__c</fullName>
        <label>cobrarimpostocusta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_cobrarjurosatrasocusta__c</fullName>
        <label>cobrarjurosatrasocusta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_cobrarjurosprimeiroperiodo__c</fullName>
        <label>cobrarjurosprimeiroperiodo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_cobrarjurosprorata__c</fullName>
        <label>cobrarjurosprorata</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_cobrarjurosprorataprimeiromes__c</fullName>
        <label>cobrarjurosprorataprimeiromes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_cobrarmultacusta__c</fullName>
        <label>cobrarmultacusta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_cobrartaxaadministracaocusta__c</fullName>
        <label>cobrartaxaadministracaocusta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não Cobrar</fullName>
                </value>
                <value>
                    <fullName>Cobrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_datacalculoreajuste__c</fullName>
        <label>datacalculoreajuste</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_datainicioperiodoaluguel__c</fullName>
        <label>datainicioperiodoaluguel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_datainicioprimeirojuros__c</fullName>
        <label>datainicioprimeirojuros</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_datainicioreajuste__c</fullName>
        <label>datainicioreajuste</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_datainiciosegundojuros__c</fullName>
        <label>datainiciosegundojuros</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_dataprimeiraparcelagrupo__c</fullName>
        <label>dataprimeiraparcelagrupo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_dataprorrogacao__c</fullName>
        <label>dataprorrogacao</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_datarecebimento__c</fullName>
        <label>datarecebimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_datavencimento__c</fullName>
        <label>datavencimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_diascarenciacorrecaoatraso__c</fullName>
        <label>diascarenciacorrecaoatraso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_diascarenciamultajurosatraso__c</fullName>
        <label>diascarenciamultajurosatraso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_frequenciavencimento__c</fullName>
        <label>frequenciavencimento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_grupoplanoindexador__c</fullName>
        <label>grupoplanoindexador</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_indicereajuste__c</fullName>
        <label>indicereajuste</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_numeroparcela__c</fullName>
        <label>numeroparcela</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_numeroparcelageral__c</fullName>
        <label>numeroparcelageral</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_observacaocusta__c</fullName>
        <label>observacaocusta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_origemcusta__c</fullName>
        <label>origemcusta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Obra</fullName>
                </value>
                <value>
                    <fullName>Administração</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_origemparcela__c</fullName>
        <label>origemparcela</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_padraocobranca__c</fullName>
        <label>padraocobranca</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_parcelarecebida__c</fullName>
        <label>parcelarecebida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_repassarvalorlocadorcusta__c</fullName>
        <label>repassarvalorlocadorcusta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não repassar</fullName>
                </value>
                <value>
                    <fullName>Repassar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_taxaprimeirojuros__c</fullName>
        <label>taxaprimeirojuros</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_taxasegundojuros__c</fullName>
        <label>taxasegundojuros</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_tipodacusta__c</fullName>
        <label>tipodacusta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_tipoparcela__c</fullName>
        <label>tipoparcela</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_tiposeguro__c</fullName>
        <label>tiposeguro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MIP</fullName>
                </value>
                <value>
                    <fullName>DFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_totalparcelasdogrupo__c</fullName>
        <label>totalparcelasdogrupo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_totalparcelasdogrupoinformado__c</fullName>
        <label>totalparcelasdogrupoinformado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_usuariocedeudesconto__c</fullName>
        <label>usuariocedeudesconto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_usuariorecebeu__c</fullName>
        <label>usuariorecebeu</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_valoracrescimo__c</fullName>
        <label>valoracrescimo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valoracrescimoconfirmado__c</fullName>
        <label>valoracrescimoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorcorrecao__c</fullName>
        <label>valorcorrecao</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorcorrecaoatraso__c</fullName>
        <label>valorcorrecaoatraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorcorrecaoatrasoconfirmado__c</fullName>
        <label>valorcorrecaoatrasoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorcorrecaoconfirmado__c</fullName>
        <label>valorcorrecaoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorcorrecaoembutida__c</fullName>
        <label>valorcorrecaoembutida</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valordesconto__c</fullName>
        <label>valordesconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valordescontoadiantamento__c</fullName>
        <label>valordescontoadiantamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valordescontoadiantamentoconfirmado__c</fullName>
        <label>valordescontoadiantamentoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valordescontocondicional__c</fullName>
        <label>valordescontocondicional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valordescontocondicionalconfirmado__c</fullName>
        <label>valordescontocondicionalconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valordescontoconfirmado__c</fullName>
        <label>valordescontoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorjurosatraso__c</fullName>
        <label>valorjurosatraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorjurosatrasoconfirmado__c</fullName>
        <label>valorjurosatrasoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorjuroscontrato__c</fullName>
        <label>valorjuroscontrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorjuroscontratoconfirmado__c</fullName>
        <label>valorjuroscontratoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorjuroscontratoembutido__c</fullName>
        <label>valorjuroscontratoembutido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorjuroscontratoembutidoconfirmado__c</fullName>
        <label>valorjuroscontratoembutidoconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valormulta__c</fullName>
        <label>valormulta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valormultaconfirmado__c</fullName>
        <label>valormultaconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorprincipal__c</fullName>
        <label>valorprincipal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorprincipalconfirmado__c</fullName>
        <label>valorprincipalconfirmado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_valorresiduo__c</fullName>
        <label>valorresiduo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Parcela</label>
    <nameField>
        <displayFormat>PA# {00000000}</displayFormat>
        <label>Parcelas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcelas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>